--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-use-websocket": "^4.9.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
