--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=ws://192.168.254.136:8000/messenger/
+#NEXT_PUBLIC_API_URL=ws://192.168.254.136:8000/messenger/
+NEXT_PUBLIC_API_URL=ws://localhost:8002/messenger/
