--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
+    "@reduxjs/toolkit": "^2.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -44,7 +45,9 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^11.0.3"
   }
 }
