--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@tabler/icons-react": "^3.19.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@tabler/icons-react": "^3.24.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "antd": "^5.21.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.13.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-use-websocket": "^4.9.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "uuid": "^11.0.3"
