--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eventemitter3": "^5.0.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-redux": "^9.1.2",
