--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
     "@reduxjs/toolkit": "^2.4.0",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -46,6 +47,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "eventemitter3": "^5.0.1",
+    "lodash": "^4.17.21",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "react-redux": "^9.1.2",
