--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
@@ -47,6 +48,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "eventemitter3": "^5.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "lodash": "^4.17.21",
     "postcss": "^8",
     "prettier": "^3.3.3",
@@ -55,5 +58,11 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "uuid": "^11.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
