--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "@tabler/icons-react": "^3.24.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
@@ -20,12 +22,15 @@
     "antd": "^5.21.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "motion": "^12.4.3",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-use-websocket": "^4.9.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "three": "^0.173.0",
+    "three-globe": "^2.41.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
