--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_FRONTEND_MACHINE_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_LAPTOP_PRIVATE_KEY }}
 
       - name: Deploy to server
         run: ssh root@194.58.114.226 "cd /safe_chat/secret_chat-frontend && git pull && pnpm install && pnpm build && pm2 restart frontend"
