--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tsparticles/slim": "^3.5.0",
     "antd": "^5.21.4",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
     "framer-motion": "^11.13.1",
     "motion": "^12.4.3",
     "next": "14.2.15",
@@ -30,7 +31,9 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "three": "^0.173.0",
-    "three-globe": "^2.41.12"
+    "three-globe": "^2.41.12",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
