--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-use-websocket": "^4.9.0",
+    "react-virtuoso": "^4.12.7",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "three": "^0.173.0",
